# phigros-data-api

./: CMakeLists.txt  README.md  错误码对照表.txt  错误码对着表.txt
Phi/: CMakeLists.txt
Phi/src/: main.h
Phi/src/common/exception/: self_exception.hpp
Phi/src/common/utils/: cxx_gc.hpp  other_util.hpp  prevent_inject.hpp  sql_handle.hpp  sql_util.hpp
Phi/src/configuration/: config.hpp
Phi/src/controller/: phigros_controller.hpp
Phi/src/service/: phigros_service.hpp
Phi/src/service/impl/: arcaea_service_impl.hpp  phi_taptap_api.hpp  phigros_service_impl.hpp  zip_archive
Phi/src/test/bing/: test_project.hpp
ProxyLoadBalancingAPI/: CMakeLists.txt  cpp.hint
ProxyLoadBalancingAPI/src/: main.cpp  main.h
ProxyLoadBalancingAPI/src/common/: http_util.hpp  self_exception.hpp  utils.hpp
ProxyLoadBalancingAPI/src/configuration/: config.hpp
ProxyLoadBalancingAPI/src/test/bing/: test_project.hpp
resource/: PhigrosInfo.db  PlayerRecords.db  config.yaml  localDB.db  sync.py  sync_yuhao.py
src/: main.cpp  main.h
src/common/exception/: self_exception.hpp
src/common/utils/: http_util.hpp  log_system.hpp  source_location_handle.hpp  sql_handle.hpp  sql_util.hpp
src/configuration/: config.hpp
src/controller/: arcaea_controller.hpp  phigros_controller.hpp
src/service/: phigros_service.hpp
src/service/impl/: arcaea_service_impl.hpp  phi_taptap_api.hpp  phigros_service_impl.hpp
src/test/bing/: test_project.hpp
